Closed Bug 534546 Opened 15 years ago Closed 15 years ago

[HTML5] script with defer attribute never runs

Categories

(Core :: DOM: HTML Parser, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Unassigned)

References

()

Details

(Keywords: regression)

The single-key shortcuts on http://www.squarefree.com/start/ don't work with html5.enable set to true.  Apparently the <script> doesn't run unless I remove its defer attribute.

I think this bug was introduced within the last week.
I thought the HTML5 parser was passing our test cases for defer.
Priority: -- → P1
WFM with my local build. As far as I can tell, the only difference in my local build is that I have the patch for bug 531106 applied.
OK. It seems hg pull --rebase or something of that nature has caused part of the implementation of defer scripts to get dropped, so the patch didn't land as intended.
http://hg.mozilla.org/mozilla-central/rev/a732c6d3c078

Thanks for catching this.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.