Bug 534546 - Script with defer attribute never runs in the HTML5 parser. Part of the patch for bug 515610 (r=bnewman) but not landed due to a bad merge.

--HG--
extra : rebase_source : 9a6d14b2147370d16bd27b206e12b05037279d83